# OAD

./: .gitignore  README.md
Apeer/: README.md
BioApps/: README.md  (+1 more)
ZEN-API/python_examples/python_packages/zen312/: README.md  pyproject.toml
ZEN-API/python_examples/python_packages/zen312/src/zen_api/workflows/v3beta/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/: COPYRIGHT.txt  MANIFEST.in  NOTICE.txt  README.md  pyproject.toml
ZEN-API/python_package/zen_api-2026.05.1/docs/: ZEN_API_Documentation_2026.05.1.html  ZEN_API_Documentation_2026.05.1.md
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/: 404.html  index.html  objects.inv  sitemap.xml
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/reference/acquisition/: v1beta.html
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/reference/application/: v1.html
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/reference/common/: v1.html
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/reference/hardware/: v1.html
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/reference/workflows/: v1.html  v1beta.html  v2.html  v3beta.html
ZEN-API/python_package/zen_api-2026.05.1/docs/mkdocs_site/search/: search_index.json
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/acquisition/v1beta/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/application/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/application/v1/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/common/v1/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/hardware/v1/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/workflows/v1/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/workflows/v1beta/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/workflows/v2/: __init__.py
ZEN-API/python_package/zen_api-2026.05.1/src/zen_api/workflows/v3beta/: __init__.py
(+1227 files in other folders)
