[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "zen_api"
version = "2026.05.1"
dependencies = [
  "betterproto==2.0.0b7",
]
description = "ZEN API python wrappers"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Carl Zeiss Microscopy GmbH", email = "info.microscopy@zeiss.com"},
]
keywords = ["zeiss", "zen", "microscopy", "api", "grpc", "protobuf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://www.zeiss.com/microscopy"
"Documentation" = "https://www.zeiss.com/microscopy"
"Repository" = "https://github.com/zeiss-microscopy/zen_api"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE.txt",
    "/COPYRIGHT.txt",
    "/NOTICE.txt",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zen_api"]