[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "zen_api"
version = "2025.5.1"
dependencies = [
  "betterproto==2.0.0b7",
]
description = "ZEN API python wrappers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]